# Eurovision1

./: .editorconfig  Eurovision.c  Eurovision_Project.sln  Eurovision_system.aps  Eurovision_system.vcxproj  Eurovision_system.vcxproj.filters  Helper.c  Judge.c  Map.c  README.md  State.c  eurovision.h  helper.h  judge.h  list.h  main.c  map.h  state.h  test_utilities.h
Eurovision_Project/: CMakeLists.txt  Eurovision_Project.vcxproj  Eurovision_Project.vcxproj.filters  Helper.c  Judge.c  Main.c  Map.c  State.c  eurovision.c  eurovisionTests.c  eurovisionTestsMain.c  helper.h  judge.h  map.h  resource.h  state.h
Eurovision_Project/tests/: main.c  results.txt  test1.c
